update FlatIni